compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@global_constant_propagation__bool_global.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/global_constant_propagation/bool_global.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getglobal temp.2, 0
enabled.3 = temp.2
return 


----------- propagate_readonly_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2 = bool true
enabled.3 = temp.2
return
