compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@global_constant_propagation__fix_global.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/global_constant_propagation/fix_global.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getglobal temp.2, 0
storeprop temp.2, 0
return 


----------- propagate_readonly_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.2 = fix 2.5
storeprop temp.2, 0
return
