compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@global_constant_propagation__written_not_replaced.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/global_constant_propagation/written_not_replaced.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
getglobal temp.5, 0
temp.6 = int 1
temp.7 = temp.5 + temp.6
setglobal 0, temp.7
getglobal temp.8, 0
x.9 = temp.8
return
